testsuite/tests/parser/should_fail/pfail046.stderr
pfail046.alan:3:8: Error: Parse error on input `|'
	Cannot use conditional symbols in expressions

